--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "test":"cypress open",
+     "runOnChrome":"cypress run --browser chrome"
   },
   "author": "Vishwanath",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.8.1"
+  "cypress": "^13.8.1"
   },
   "devDependencies": {
     "cypress-xpath": "^2.0.1"
